Applied patch 5_1. JVM updated to v.21